--- a/gammel-udkast/package.json
+++ b/gammel-udkast/package.json
@@ -13,11 +13,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^3.0.2",
     "better-sqlite3": "^11.8.1",
     "crypto": "^1.0.1",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "fs": "^0.0.1-security",
+    "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.1"
   }
 }
