--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,30 @@
+# 🚀 Sikkerhed & database
+.env
+filevault.db
+
+# 🚀 Dependencies & build-filer
 node_modules/
+package-lock.json
+
+# 🚀 Midlertidige og log-filer
+.DS_Store
+Thumbs.db
+.vscode/
+npm-debug.log
+yarn-debug.log
+yarn-error.log
+test.txt
+test2.txt
+test3.txt
+test4.txt
+test5.txt
+downloaded_test.txt
+decrypted_*.txt
+
+# 🚀 Backup-mapper & gamle versioner
 gammel-udkast/
+
+# 🚀 Uploadede filer (Krypterede)
+uploads/
+
+
